force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/ARTL_Bulk_Upload_Iteration__c.object-meta.xml
<CustomObject>
    <label>ARTL Bulk Upload Iteration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ARTL Bulk Upload Iteration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTL Bulk Upload Iterations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>