force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/isNew__c.field-meta.xml
<CustomField>
    <fullName>isNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isNew</label>
    <type>Checkbox</type>
</CustomField>