force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>