force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Shifting</fullName>
            </value>
            <value>
                <fullName>LSI Transfer</fullName>
            </value>
            <value>
                <fullName>MACD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>