force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>