force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>