force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>