force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>