force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>