force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/fields/Quote_or_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Quote_or_Opportunity_URL__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Quote_Id__c  , &apos;Quote&apos;, &apos;_blank&apos;) 
+ &apos;  &apos; + 
HYPERLINK(&apos;/&apos; + Opportunity_Id__c   , &apos;Opportunity&apos;, &apos;_blank&apos;)</formula>
    <label>Quote or Opportunity URL</label>
    <type>Text</type>
</CustomField>