force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/BCPDCP_Contact.recordType-meta.xml
<RecordType>
    <fullName>BCPDCP_Contact</fullName>
    <active>true</active>
    <label>BCPDCP Contact</label>
</RecordType>