force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/BCPDCP_Contact_Update.recordType-meta.xml
<RecordType>
    <fullName>BCPDCP_Contact_Update</fullName>
    <active>true</active>
    <label>BCPDCP Contact Update</label>
</RecordType>