force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/BUC.recordType-meta.xml
<RecordType>
    <fullName>BUC</fullName>
    <active>true</active>
    <label>BUC</label>
</RecordType>