force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/Bulk_Asset.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Asset</fullName>
    <active>true</active>
    <label>Bulk Asset</label>
</RecordType>