force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/Party_Contact.recordType-meta.xml
<RecordType>
    <fullName>Party_Contact</fullName>
    <active>true</active>
    <label>Party Contact</label>
</RecordType>