force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/Party_Contact_Update.recordType-meta.xml
<RecordType>
    <fullName>Party_Contact_Update</fullName>
    <active>true</active>
    <label>Party Contact Update</label>
</RecordType>