force-app/main/default/objects/ARTL_Bulk_Upload_Iteration__c/recordTypes/Quota.recordType-meta.xml
<RecordType>
    <fullName>Quota</fullName>
    <active>true</active>
    <label>Quota</label>
</RecordType>